# AC_proj_39

./: .gitattributes  .gitignore
MATLAB/: .gitignore  proj_model.slx
MATLAB/hdl_prj/hdlsrc/proj_model/: Grid_Locator.vhd  Subsystem.vhd  Subsystem_compile.do  Subsystem_map.txt  Subsystem_pkg.vhd  Subsystem_report.html  clearHighlightingRemovedDeadBlocks.m  gm_proj_model.slx  hcv  (+8 more)
MATLAB/hdlsrc/proj_model/: Adder.vhd  Adder_compile.do  Adder_map.txt  Adder_report.html  Source_report.html  gm_proj_model.slx  hcv  hdlcodegenstatus.json  hdlcodegenstatus.mat  proj_model_report.html
RHDL/: Cargo.toml
RHDL/src/: main.rs  memory.rs  pointcloud.rs  pseudoimage.rs
VITIS/: .gitignore
VITIS/hls_component/: .gitignore  PFN.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
VITIS/hls_component/hls_component/: hls_component.hlscompile_summary
_ide/: .peers.ini  version.ini  workspace_journal.py  workspace_journal_5848.py
hls_component/: .gitignore  compile_commands.json  hls_config.cfg  pipeline.cpp
hls_component/hls_component/: hls_component.hlscompile_summary  hls_component.hlsrun_impl_summary
hls_component/hls_component/hls/: config.cmdline  hls_data.json
hls_component/hls_component/reports/: hls_compile.rpt  hls_impl_syn.rpt  v++_compile_hls_component_guidance.html
object_detector/: compile_commands.json  hls_config.cfg  vitis-comp.json
object_detector/object_detector/: object_detector.hlscompile_summary  vitis-comp.json
object_detector/object_detector/hls/: config.cmdline  hls_data.json
object_detector/object_detector/hls/.autopilot/db/driver/src/: CMakeLists.txt  xpointpillars_cnn_hw.h
object_detector/object_detector/reports/: v++_compile_object_detector_guidance.html
(+829 files in other folders)
