[package]
name = "AC_proj_39"
version = "0.1.0"
edition = "2024"

[dependencies]
rhdl = {git = "https://github.com/samitbasu/rhdl.git",rev = "8d04954"}
rhdl-macro = {git = "https://github.com/samitbasu/rhdl.git",rev = "8d04954"}
rhdl-fpga = {git = "https://github.com/samitbasu/rhdl.git",rev = "8d04954"}
